@@ -675,6 +675,9 @@ Heterogeneous job details
 \fBGang\fR
 Gang scheduling details
 .TP
+\fBJobAccountGather\fR
+Common job account gathering details (not plugin specific).
+.TP
 \fBJobContainer\fR
 Job container plugin details
 .TP
