@@ -2644,6 +2644,7 @@ typedef struct reservation_name_msg {
 #define DEBUG_FLAG_POWER_SAVE   0x0008000000000000 /* Power Save debug */
 #define DEBUG_FLAG_AGENT	0x0010000000000000 /* RPC Agent debug */
 #define DEBUG_FLAG_DEPENDENCY	0x0020000000000000 /* Dependency debug */
+#define DEBUG_FLAG_JAG		0x0040000000000000 /* Job Account Gather debug */
 
 #define PREEMPT_MODE_OFF	0x0000	/* disable job preemption */
 #define PREEMPT_MODE_SUSPEND	0x0001	/* suspend jobs to preempt */
