@@ -17,6 +17,7 @@ documents those changes that are of interest to users and administrators.
  -- slurmrestd/v0.0.37 - Add update_time field to Jobs query to allow clients
     to only get jobs list based on change timestamp.
  -- Reset job eligible time when job is manually held.
+ -- Add DEBUG_FLAG_JAG to improve logging related to job account gathering.
 
 * Changes in Slurm 20.11.3
 ==========================
